<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mashup.healthyup.features.setting.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/appbar"
            layout="@layout/layout_appbar_back_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_explanation_length_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="55dp"
            android:text="@string/change_explanation_length_title_1"
            android:textAppearance="@style/Typography.HeadLine2.White"
            android:textColor="@color/color_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar" />

        <TextView
            android:id="@+id/tv_explanation_length_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_explanation_length_title_2"
            android:textAppearance="@style/Typography.HeadLine3.White"
            android:textColor="@color/color_primary"
            app:layout_constraintStart_toEndOf="@+id/tv_explanation_length_title_1"
            app:layout_constraintTop_toTopOf="@+id/tv_explanation_length_title_1" />

        <TextView
            android:id="@+id/tv_explanation_length_title_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/change_explanation_length_title_3"
            android:textAppearance="@style/Typography.HeadLine2.White"
            android:textColor="@color/color_on_background"
            app:layout_constraintStart_toStartOf="@+id/tv_explanation_length_title_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_explanation_length_title_1" />

        <TextView
            android:id="@+id/tv_explanation_length_sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/change_coach_sub_title"
            android:textAppearance="@style/Typography.SmallBody1.White"
            android:textColor="@color/color_on_background_variant_2"
            app:layout_constraintStart_toStartOf="@+id/tv_explanation_length_title_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_explanation_length_title_3" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_explanation_length_sub_title">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_radio_1"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@drawable/selector_setting_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/change_explanation_length_yes"
                android:textAppearance="@style/Typography.Body2.White"
                android:textColor="@drawable/selector_setting_radio_text"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_radio_2"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_setting_radio_button"
                android:button="@null"
                android:gravity="center"
                android:text="@string/change_explanation_length_no"
                android:textAppearance="@style/Typography.Body2.White"
                android:textColor="@drawable/selector_setting_radio_text"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="230dp"
            android:layout_height="54dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/selector_save_button"
            android:button="@null"
            android:text="@string/save"
            android:textAppearance="@style/Typography.Button1.White"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>