<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/appbar"
            layout="@layout/layout_appbar_close_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/color_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_background"
                android:paddingTop="17dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appbar">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_my_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/setting_title_my_info"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_chagne_profile"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_change_profile"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_my_info_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_split_setting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/setting_title_split_setting"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_chagne_profile" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_split_setting"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="무분할"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_split_setting_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_exercise_audio_setting_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/setting_title_exercise_audio_setting"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_split_setting" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_coach_voice"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_change_coach_voice"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_exercise_audio_setting_title" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_exercise_speed"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_change_exercise_speed"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_change_coach_voice" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_change_explanation_length"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_change_exercise_explanation_length"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_change_exercise_speed" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_voc_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/setting_title_voc"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_change_explanation_length" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_send_email"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_send_email"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_voc_title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_app_info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/setting_title_app_info"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_send_email" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/view_version_info"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/layer_button"
                    android:orientation="horizontal"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_app_info_title">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/setting_subtitle_version_info"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="@color/color_on_background" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_version"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="v1.0.0"
                        android:textColor="@color/color_on_secondary" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_term_of_use"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_terms_of_use"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_version_info" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_privacy_statement"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_privacy_statement"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_term_of_use" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_open_source"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/layer_button"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="center|start"
                    android:paddingStart="24dp"
                    android:paddingEnd="17dp"
                    android:stateListAnimator="@null"
                    android:text="@string/setting_subtitle_opensource"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_on_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_privacy_statement" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
